--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div class="calculator">
         <div class="display">
-            Display Text
+            <div class="display1"></div>
+            <div class="display2"></div>
         </div>
         
         <div class="buttons">
@@ -20,28 +21,28 @@
                 <button id="clear">Clear</button>
             </div>
             <div class="row">
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
                 <button class="operation" id="divide">÷</button>
             </div>       
             <div class="row">
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
                 <button class="operation" id="multiply">×</button>
 
             </div>
             <div class="row">
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
                 <button class="operation" id="substract">−</button>
             </div>
             <div class="row">
-                <button id="point">.</button>
-                <button id="0">0</button>
-                <button class="operation" id="equal">=</button>
+                <button class="number" id="point">.</button>
+                <button class="number" id="0">0</button>
+                <button id="equal">=</button>
                 <button class="operation" id="add">+</button>
             </div>
         </div>
