--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="buttons">
             <div class="row">
                 <button id="clear">Clear</button>
+                <button id="delete">Backspace</button>
             </div>
             <div class="row">
                 <button class="number" id="7">7</button>
